--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "axios": "^0.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "react-router-dom": "^6.0.2",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "vite",
     "build": "react-scripts build",
     "test": "cypress open",
     "eject": "react-scripts eject"
@@ -40,6 +40,7 @@
   "devDependencies": {
     "cypress": "^9.7.0",
     "cypress-react-selector": "^3.0.0",
-    "cypress-watch-and-reload": "^1.10.3"
+    "cypress-watch-and-reload": "^1.10.3",
+    "vite": "^4.4.11"
   }
 }
